hphp/test/slow/type_annotation/type_annotation3.php
<?hh // strict

// error: non-existent class
var_dump(type_structure(C::class, 'T'));
